Improve image manipulation